// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input text should render correctly render the input component 1`] = `
<div
  className="rn-inputBlock"
>
  <input
    className="input hasContent"
    id="user"
    name="user"
    onChange={[MockFunction]}
    value="1234"
  />
  <label
    className="inputLabel"
    htmlFor="user"
  >
    <span
      className="inputLabelInner"
    >
      test
    </span>
  </label>
</div>
`;

exports[`Input textarea should render correctly render the input component 1`] = `
<div
  className="rn-inputBlock"
>
  <textarea
    className="textarea hasContent"
    cols="80"
    id="user"
    name="user"
    onChange={[MockFunction]}
    rows="5"
    value="1234"
  />
  <label
    className="inputLabel"
    htmlFor="user"
  >
    <span
      className="inputLabelInner"
    >
      test
    </span>
  </label>
</div>
`;
